--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ eggbug = "0.2.0"
 html-escape = "0.2.13"
 rand = "0.8.5"
 reqwest = "0.11.22"
+string_search = "1.0.3"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 url = "2.4.1"
